# ecommerce_microservis_projects

./: .gitignore  README.md  docker-compose.yml
Ecommerce-user/: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
Ecommerce-user/Core/: authentication.py  consumer.py  messaging.py  settings.py  urls.py
Ecommerce-user/user_service/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
Ecommerce-user/user_service/migrations/: 0001_initial.py  0002_user_is_shop_owner.py
ecommerce-shopcart/: .dockerignore  .gitignore  Dockerfile  alembic.ini  consumer.py  docker-compose.yaml  entrypoint.sh  env.py  pyproject.toml
ecommerce-shopcart/github/workflows/: deploy.yml
ecommerce-shopcart/src/: main.py
ecommerce-shopcart/src/shopcart_service/: crud.py  messaging.py  models.py  schemas.py
ecommerce-shopcart/src/shopcart_service/api/v1/: routes.py
ecommerce-shopcart/src/shopcart_service/core/: config.py  db.py  product_client.py
order-service/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
order-service/order_service/: pytest.ini
order-service/order_service/order_service/: celery.py  settings.py  tasks.py  urls.py  wsgi.py
order-service/order_service/orders/: urls_v1.py
order-service/order_service/orders/admin/: __init__.py  admin_v1.py
order-service/order_service/orders/migrations/: 0001_initial.py
order-service/order_service/orders/serializers/: serializers_v1.py
order-service/order_service/orders/views/: views_v1.py
order-service/order_service/utils/: unique_slugify.py
order-service/uv/: .env render
(+118 files in other folders)
